--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,29 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.photos{
+  background-color: #e4e4e4;
+  width: 1200px;
+  height: 600px;
+  margin: 20px auto;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.photos .photo{
+  margin: 10px;
+  width: 200px;
+  height: 200px;
+}
+
+.photos .photo img{
+  width: 100%;
+  height: 100%;
+}
